Grease pencil and armature will sometimes copy successfully because of the put in Collection order, sometimes fail. #63042

Closed
opened 2019-03-28 10:59:50 +01:00 by Yee Ta Ta · 6 comments

System Information
Windows 10 64bit , NVIDIA GTX1080,i7-6700k,Ram:32GB

WIN 10 1803 version,GPU drivers 419.67 version all latest version.

Blender Version
Broken: Blender 2.8 2019/03/28 version

Short description of error

Like this video,I'm not sure if this is a bug, or if I should pay attention to the Collection order.

I found the reason is ....the copied Grease pencil Relations armature isn't changed to a new bone, it will follow the old bones.

And if I put the order is incorrect, not only can not be copied, it will also make the "duplicate collection" will can't follow the new bones ,but this part I forgot to video...

Test.mp4

and this is file After I finished the video, I found that I forgot to archive, so I redo a new file.
TEST 0328.blend

**System Information** Windows 10 64bit , NVIDIA GTX1080,i7-6700k,Ram:32GB WIN 10 1803 version,GPU drivers 419.67 version all latest version. **Blender Version** Broken: Blender 2.8 2019/03/28 version **Short description of error** Like this video,I'm not sure if this is a bug, or if I should pay attention to the Collection order. I found the reason is ....the copied Grease pencil Relations armature isn't changed to a new bone, it will follow the old bones. And if I put the order is incorrect, not only can not be copied, it will also make the "duplicate collection" will can't follow the new bones ,but this part I forgot to video... [Test.mp4](https://archive.blender.org/developer/F6894577/Test.mp4) and this is file After I finished the video, I found that I forgot to archive, so I redo a new file. [TEST 0328.blend](https://archive.blender.org/developer/F6894630/TEST_0328.blend)
Author

Added subscriber: @YeeTaTa

Added subscriber: @YeeTaTa

Added subscribers: @mont29, @ZedDB

Added subscribers: @mont29, @ZedDB
Bastien Montagne was assigned by Sebastian Parborg 2019-03-28 13:55:20 +01:00

I can confirm that the GP specific armature objects are not updated.

@mont29 feel free to reassign if this is not for you

I can confirm that the GP specific armature objects are not updated. @mont29 feel free to reassign if this is not for you

This is actually affecting other cases of obdata using other object ID (e.g. the 'Texture Mesh' option of a mesh exhibits the same behavior), if target object is not duplicated first, then link is lost during final remapping… will check how to fix that.

This is actually affecting other cases of obdata using other object ID (e.g. the 'Texture Mesh' option of a mesh exhibits the same behavior), if target object is not duplicated first, then link is lost during final remapping… will check how to fix that.

This issue was referenced by d66ed7d540

This issue was referenced by d66ed7d5408c93eff4ed3fc2bd6fd172b0f76889

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63042
No description provided.